# gizmosql-odbc-driver

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  build_win32.bat  build_win64.bat  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
docs/: BUILDING.md  CONFIGURATION.md  OAUTH.md
flight_sql/: CMakeLists.txt  address_info.cc  address_info.h  flight_sql_auth_method.cc  flight_sql_auth_method.h  flight_sql_connection.cc  flight_sql_connection.h  flight_sql_connection_test.cc  flight_sql_driver.cc  flight_sql_get_tables_reader.cc  flight_sql_get_tables_reader.h  flight_sql_get_type_info_reader.cc  flight_sql_get_type_info_reader.h  flight_sql_result_set.cc  flight_sql_result_set.h  flight_sql_result_set_accessors.cc  flight_sql_result_set_accessors.h  flight_sql_result_set_column.cc  flight_sql_result_set_column.h  flight_sql_result_set_metadata.cc  flight_sql_result_set_metadata.h  flight_sql_ssl_config.cc  flight_sql_ssl_config.h  flight_sql_statement.cc  flight_sql_statement.h  flight_sql_statement_get_columns.cc  flight_sql_statement_get_columns.h  flight_sql_statement_get_tables.cc  flight_sql_statement_get_tables.h  flight_sql_statement_get_type_info.cc  flight_sql_statement_get_type_info.h  flight_sql_stream_chunk_buffer.cc  flight_sql_stream_chunk_buffer.h  get_info_cache.cc  get_info_cache.h  json_converter.cc  json_converter.h  json_converter_test.cc  main.cc  merge_abseil.cmake  (+13 more)
flight_sql/accessors/: binary_array_accessor.cc  binary_array_accessor.h  binary_array_accessor_test.cc  boolean_array_accessor.cc  boolean_array_accessor.h  boolean_array_accessor_test.cc  common.h  date_array_accessor.cc  date_array_accessor.h  date_array_accessor_test.cc  decimal_array_accessor.cc  decimal_array_accessor.h  decimal_array_accessor_test.cc  main.h  primitive_array_accessor.cc  primitive_array_accessor.h  primitive_array_accessor_test.cc  string_array_accessor.cc  string_array_accessor.h  string_array_accessor_test.cc  time_array_accessor.cc  time_array_accessor.h  time_array_accessor_test.cc  timestamp_array_accessor.cc  timestamp_array_accessor.h  timestamp_array_accessor_test.cc  types.h
flight_sql/config/: configuration.cc  connection_string_parser.cc
flight_sql/include/flight_sql/: flight_sql_driver.h
flight_sql/include/flight_sql/config/: configuration.h  connection_string_parser.h
flight_sql/include/flight_sql/ui/: add_property_window.h  custom_window.h  dsn_configuration_window.h  window.h
flight_sql/ui/: add_property_window.cc  custom_window.cc  dsn_configuration_window.cc  window.cc
installer/: GizmoSqlOdbc.wxs  gizmosql-odbc.ini
odbc_entry/: CMakeLists.txt  driver_singleton.cc  driver_singleton.h  odbc_entry.cc  version.rc.in
odbc_entry/exports/: gizmosql-odbc.def  gizmosql-odbc.exports  gizmosql-odbc.map
odbc_perf_testing/: README.md  main.py
odbc_perf_testing/test_cases/: test_data_types.py  test_fetch_all.py
odbc_perf_testing/test_strategy/: __init__.py  base_strategy.py  execution_details.py  pyodbc_strategy.py  turbodbc_strategy.py
odbcabstraction/: CMakeLists.txt  calendar_utils.cc  diagnostics.cc  encoding.cc  exceptions.cc  logger.cc  spd_logger.cc  utils.cc
odbcabstraction/include/odbcabstraction/: blocking_queue.h  calendar_utils.h  diagnostics.h  encoding.h  error_codes.h  exceptions.h  logger.h  platform.h  spd_logger.h  types.h  utils.h
odbcabstraction/include/odbcabstraction/odbc_impl/: AttributeUtils.h  EncodingUtils.h  ODBCConnection.h  ODBCDescriptor.h  ODBCEnvironment.h  ODBCHandle.h  ODBCStatement.h  TypeUtilities.h
odbcabstraction/include/odbcabstraction/spi/: connection.h  driver.h  result_set.h  result_set_metadata.h  statement.h
odbcabstraction/odbc_impl/: ODBCConnection.cc  ODBCDescriptor.cc  ODBCEnvironment.cc  ODBCStatement.cc
